--- a/t3.html
+++ b/t3.html
@@ -44,7 +44,7 @@
     <div id="game-area">
 
     </div>
-    <script src="t3.js"></script>
+    <script src="t3.js" type="module"></script>
     changed
 </body>
 </html>
