Functionality and UI all complete and working. Will add ASCII art and animations next

--- a/t3.html
+++ b/t3.html
@@ -9,11 +9,15 @@
 </head>
 <body>
 
-
+    <div id = "scanline-overlay"></div>
     
     <div id="square">
         <div id="outcome-overlay">
-            <button id = "to-menu">Play again</button>
+
+            <div class=>
+                <p></p>
+                <button id = "replay">Play again</button>
+            </div>
         </div>
         <div id="game-menu">
             <div id="first">
@@ -39,6 +43,5 @@
         </div>
     </div>
     <script src="tictactoe-rewrite.js"></script>
-    changed
 </body>
 </html>
